# ConsoleBattleship

./: .gitignore  CMakeLists.txt  LICENSE  README.md  consoleLib.c  consoleLib.h  consoleMenu.c  consoleMenu.h  gameField.c  gameField.h  helpMenu.c  helpMenu.h  main.c
Release/: makefile  objects.mk  subdir.mk
